[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
requires-python = ">=3.8"
description = "A small example package"
authors = [
  { name="eagle", email="eagle@42.fr" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
homepage = "https://github.com/eagle/ft_package"
